--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
             <button class="main_button">Dodaj</button>
             <button class="main_button all_documents" onclick="sendTo('documents')">Wszystkie</button>
         </div>
-        <div class="card" onclick="sendTo('leanwkubeczku.github.iocard/card.html')">
+        <div class="card" onclick="sendTo('leanwkubeczku.github.io/card.html')">
             <img class="background" src="images/YLFqBLa.png">
             <img class="human" src="images/4iFdAaV.png">
             <div class="id_bottom">
