--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
         <div class="card_grid">
             <p class="title">Dokumenty</p>
             <button class="main_button">Dodaj</button>
-            <button class="main_button all_documents" onclick="sendTo('documents')">Wszystkie</button>
+            <button class="main_button all_documents" onclick="sendTo('leanwkubeczku.github.io/documents.html')">Wszystkie</button>
         </div>
         <div class="card" onclick="sendTo('leanwkubeczku.github.io/card.html')">
             <img class="background" src="images/YLFqBLa.png">
@@ -56,7 +56,7 @@
         </div>
         <div class="card_below_grid">
             <p class="title">Usługi</p>
-            <button class="main_button all_services" onclick="sendTo('services')">Wszystkie</button>
+            <button class="main_button all_services" onclick="sendTo('leanwkubeczku.github.io/services.html')">Wszystkie</button>
         </div>
         <div class="services_grid">
             <div class="service_box">
