--- a/qr2.html
+++ b/qr2.html
@@ -114,7 +114,7 @@
   <div class="top_grid">
     <div class="action_grid" style="width: 25%;">
       <img src="images/BDZT6fX.png" class="back_img">
-      <p onclick="sendTo('card')" class="back_text">mDowód</p>
+      <p onclick="sendTo('leanwkubeczku.github.io/card.html')" class="back_text">mDowód</p>
     </div>
     <p class="title_text" style="text-align: center;">Zeskanuj kod QR</p>
   </div>
