--- a/card.html
+++ b/card.html
@@ -108,7 +108,7 @@
     <div class="top_grid">
         <div class="action_grid">
             <img src="images/BDZT6fX.png" class="back_img">
-            <p onclick="sendTo('home')" class="back_text">Wróć</p>
+            <p onclick="sendTo('leanwkubeczku.github.io/home.html')" class="back_text">Wróć</p>
         </div>
         <p class="title_text">mDowód</p>
         <img src="images/pomoctechniczna2.png" class="help_img" style="width: 20px;">
