--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <div class="bottom_element_image home_open home"></div>
                 <p class="bottom_element_text open">Pulpit</p>
             </div>
-            <div class="bottom_element_grid" send="documents">
+            <div class="bottom_element_grid" send="leanwkubeczku.github.io/documents.html">
                 <div class="bottom_element_image documents"></div>
                 <p class="bottom_element_text">Dokumenty</p>
             </div>
