--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <div class="bottom_element_image home_open home"></div>
                 <p class="bottom_element_text open">Pulpit</p>
             </div>
-            <div class="bottom_element_grid" send="leanwkubeczku.github.io/documents.html">
+            <div class="bottom_element_grid" send="documents">
                 <div class="bottom_element_image documents"></div>
                 <p class="bottom_element_text">Dokumenty</p>
             </div>
@@ -44,7 +44,7 @@
         <div class="card_grid">
             <p class="title">Dokumenty</p>
             <button class="main_button">Dodaj</button>
-            <button class="main_button all_documents" onclick="sendTo('leanwkubeczku.github.io/documents.html')">Wszystkie</button>
+            <button class="main_button all_documents" onclick="sendTo('leanwkubeczku.github.iodocuments.html')">Wszystkie</button>
         </div>
         <div class="card" onclick="sendTo('leanwkubeczku.github.io/card.html')">
             <img class="background" src="images/YLFqBLa.png">
