--- a/card.html
+++ b/card.html
@@ -108,7 +108,7 @@
     <div class="top_grid">
         <div class="action_grid">
             <img src="images/BDZT6fX.png" class="back_img">
-            <p onclick="sendTo('leanwkubeczku.github.io/home.html')" class="back_text">Wróć</p>
+            <p onclick="sendTo('home')" class="back_text">Wróć</p>
         </div>
         <p class="title_text">mDowód</p>
         <img src="images/pomoctechniczna2.png" class="help_img" style="width: 20px;">
@@ -180,19 +180,19 @@
 
     <div class="services_grid" style="height: auto; width: auto;">
         <div class="service_box">
-            <img class="service_box_icon" id="1" src="images/Pfan6Qa.png" onclick="sendTo('leanwkubeczku.github.io/qr2.html')">
+            <img class="service_box_icon" id="1" src="images/Pfan6Qa.png" onclick="sendTo('qr2')">
             <p class="service_box_name">Potwierdź swoje dane</p>
         </div>
         <div class="service_box">
-            <img class="service_box_icon" id="2" src="images/KUMNgQC.png" onclick="sendTo('leanwkubeczku.github.io/dane.html')">
+            <img class="service_box_icon" id="2" src="images/KUMNgQC.png" onclick="sendTo('dane')">
             <p class="service_box_name" style="width: 100px;">Dane dowodu <br>osobistego</p>
         </div>
         <div class="service_box">
-            <img class="service_box_icon" id="3" src="images/pobrane.png" onclick="sendTo('leanwkubeczku.github.io/zastzrzez.html')">
+            <img class="service_box_icon" id="3" src="images/pobrane.png" onclick="sendTo('zastzrzez')">
             <p class="service_box_name">Zastrzeż <br>PESEL</p>
         </div>
         <div class="service_box">
-            <img class="service_box_icon" id="4" src="images/ECjKGrW2.png" onclick="sendTo('leanwkubeczku.github.io/pozostałe.html')">
+            <img class="service_box_icon" id="4" src="images/ECjKGrW2.png" onclick="sendTo('pozostałe')">
             <p class="service_box_name">Pozostałe skróty</p>
         </div>
     </div>
