--- a/documents.html
+++ b/documents.html
@@ -45,7 +45,7 @@
             <input class="search" placeholder="Szukaj">
         </div>
         <p class="title">Na pulpicie</p>
-        <div class="card" onclick="sendTo('leanwkubeczku.github.io/card.html')">
+        <div class="card" onclick="sendTo('card')">
             <img class="human" src="images/czlowiek.png">
             <p class="title">mDowód</p>
             <img class="arrow" src="images/strzalka2.png">
