--- a/home.html
+++ b/home.html
@@ -44,9 +44,9 @@
         <div class="card_grid">
             <p class="title">Dokumenty</p>
             <button class="main_button">Dodaj</button>
-            <button class="main_button all_documents" onclick="sendTo('leanwkubeczku.github.iodocuments.html')">Wszystkie</button>
+            <button class="main_button all_documents" onclick="sendTo('documents')">Wszystkie</button>
         </div>
-        <div class="card" onclick="sendTo('leanwkubeczku.github.iocard.html')">
+        <div class="card" onclick="sendTo('card')">
             <img class="background" src="images/YLFqBLa.png">
             <img class="human" src="images/4iFdAaV.png">
             <div class="id_bottom">
@@ -56,7 +56,7 @@
         </div>
         <div class="card_below_grid">
             <p class="title">Usługi</p>
-            <button class="main_button all_services" onclick="sendTo('leanwkubeczku.github.ioservices.html')">Wszystkie</button>
+            <button class="main_button all_services" onclick="sendTo('services')">Wszystkie</button>
         </div>
         <div class="services_grid">
             <div class="service_box">
