--- a/pozostałe.html
+++ b/pozostałe.html
@@ -120,7 +120,7 @@
     <div class="top_grid">
         <div class="action_grid">
             <img src="images/BDZT6fX.png" class="back_img">
-            <p onclick="sendTo('leanwkubeczku.github.io/card.html')" class="back_text">mDowód</p>
+            <p onclick="sendTo('card')" class="back_text">mDowód</p>
         </div>
         <p class="title_text">Pozostałe skróty</p>
     </div>
