--- a/index.html
+++ b/index.html
@@ -197,10 +197,7 @@
 
     <a class="go">wejdź</a>
 	
-	<li>cliker dla thioco fanów https://thiocodinclicker.github.io</li>
-    <img class="thiocodin" src="images/thiocodin.jpg">
-    <img class="thiocodin" src="images/thiocodin.jpg">
-    <img class="thiocodin" src="images/thiocodin.jpg">
+	<li>Korzystanie z programu odbywa się wyłącznie na własną odpowiedzialność użytkownika. Projekt ma charakter edukacyjny. Autor nie ponosi żadnej odpowiedzialności za skutki użycia programu, w tym za ewentualne wycieki danych, szkody, straty lub inne konsekwencje wynikające z jego wykorzystania.</li>
 
 
     
