--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <a class="go">wejdź</a>
 	
-	<li>Korzystanie z programu odbywa się wyłącznie na własną odpowiedzialność użytkownika. Projekt ma charakter edukacyjny. Autor nie ponosi żadnej odpowiedzialności za skutki użycia programu, w tym za ewentualne wycieki danych, szkody, straty lub inne konsekwencje wynikające z jego wykorzystania.</li>
+	<li>Korzystanie z strony odbywa się wyłącznie na własną odpowiedzialność użytkownika. Projekt ma charakter edukacyjny. Autor nie ponosi żadnej odpowiedzialności za skutki użycia programu, w tym za ewentualne wycieki danych, szkody, straty lub inne konsekwencje wynikające z jego wykorzystania.</li>
 
 
     
